--- a/index.html
+++ b/index.html
@@ -1,24 +1,95 @@
 <!DOCTYPE html>
 <html>
-	<head>
-        <title>Page Title</title>
-	</head>
-    
-    <style>	
-		h1 {color: red; text-align: center;}
-        p {margin-left: 10%;}
+  
+  <head>
+    <title>Pedro's STEAM Portfolio</title>   
+
+    <style>
+      body {
+        margin: 0px; 
+        padding: 0px;
+      }
+
+      header {
+        color: #eee;
+        background-color: #333;
+        padding: 8px;
+        font-family: Helvetica;
+      }
+
+      aside {
+        float: right;
+        border: 0px;
+        right: 0px;
+        margin: 1%;
+        padding: :0px;
+        width: 28%;
+      }
+
+      .projectPreview {
+        float: left;
+        border: 0px;
+        width: 68%;
+        margin: 1%;
+        padding: 0px;
+      }
+
+      footer {
+        float: left;
+        text-align: right;
+        background-color: #111;
+        color: #eee;
+        margin: 0px;
+        padding: 1%;
+        width: 98%;
+      }
     </style>
 
+
+  </head>
+  
   <body>
 
-    <h1>Pedro's STEAM Portfolio Website</h1>
+    <header>
+      <h1>Pedro Silva, <i>STEAM Workshop</i></h1>
+      <h2>Science Technology Engineering Art & Mathamatics</h2> 
+    </header>
 
-    <p>
-        <a href="ar.html">Augmented Reality</a><br>
-        <a href="ar.html">Project 2</a><br>
-        <a href="ar.html">Project 3</a>
-    </p>
+    <aside>
+      <a href="#p1">Section 1</a><br>
+      <a href="#p2">Section 1</a><br>
+      <a href="#p3">Section 1</a><br>
+      <a href="#p4">Section 1</a><br>
+    </aside>
 
+    <section class="projectPreview" id="p1">
+      <h1>Project Title</h1>
+      <h3>Project Description:</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    </section>    
+
+    <section class="projectPreview" id="p2">
+      <h1>Project Title</h1>
+      <h3>Project Description:</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  </p>
+    </section>    
+
+    <section class="projectPreview" id="p3">
+      <h1>Project Title</h1>
+      <h3>Project Description:</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    </section>    
+
+    <section class="projectPreview" id="p4">
+      <h1>Project Title</h1>
+      <h3>Project Description:</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    </section>     
+
+    <footer>
+      <p>This website is designed and programmed by Pedro Silva.</p>
+    </footer>   
+  
   </body>
-</html>
 
+</html>
