--- a/index.html
+++ b/index.html
@@ -52,25 +52,39 @@
     <section>
       <h1>Projects</h1>
 
+
+
+      <!-- Project 2, Javascript Excercise -->
+      <a href="https://pedromarinyo.github.io/arCard/"><article class="project" id="p1">
+        <h2>Project 2, Javascript Excercise</h2>        
+        <p>A lifetime supply calculator.</p>
+      </article>  </a>
+
+      <!-- Days Till Graduation Excercise -->
+      <a href="https://pedromarinyo.github.io/arCard/"><article class="project" id="p1">
+        <h2>Days Till Graduation, Javascript Excercise</h2>        
+        <p>A program to calculate how many days left till graduation.</p>
+      </article>  </a>
+
       <!-- Project 1, Augmented Reality Business Card -->
       <a href="https://pedromarinyo.github.io/arCard/"><article class="project" id="p1">
         <h2>Augmented Reality Business Card</h2>
         <img src="assets/ar.jpg">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p>An augmented reality business card. </p>
       </article>  </a>
 
       <!-- Past Project 1 -->
       <article class="project" id="p2">      
         <h2>Past Project 1</h2>        
         <img src="assets/art1.png">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>        
+        <p>A past project that reflects your artistic goals here at IAA. </p>        
       </article>    
 
       <!-- Past Project 2 -->
       <article class="project" id="p3">        
         <h2>Past Project 2</h2>
         <img src="assets/art2.png">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p>A past project that reflects your artistic goals here at IAA. </p>
       </article>    
     </section>  
 
