--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
     <!-- The navigation box that lines the right border; edit this element to adjust your navigation. -->
     <aside>
+      <a href="#p6">Fortune Teller 3000</a>   
       <a href="#p5">JavaScript Excercise 2: Lifetime Suply Calculator</a>    
       <a href="#p4">JavaScript Excercise 1: Days Till Graduation Calculator</a>    
       <a href="#p1">Augmented Reality Business Card</a>    
@@ -61,6 +62,13 @@
     <section id="projects">
       <h1>Projects</h1>
 
+      <!-- Fortune Teller 3000 -->
+      <a href="fortuneTeller/index.html"><article class="project" id="p6">
+        <h2>Fortune Teller 3000</h2>   
+        <img src="assets/fortune.jpeg">     
+        <p>A fortune telling calculator.</p>
+      </article></a>
+
       <!-- JavaScript Excercise 2, Lifetime Supply Calculator -->
       <a href="#"><article class="project" id="p1">
         <h2>JavaScript Excercise 2:<br>A Lifetime Supply Calculator</h2>        
@@ -74,7 +82,7 @@
       </article></a>
 
       <!-- Augmented Reality Business Card -->
-      <a href="https://pedromarinyo.github.io/arCard/"><article class="project" id="p1">
+      <a href="ar/index.html"><article class="project" id="p1">
         <h2>Augmented Reality Business Card</h2>
         <img src="assets/ar.jpg">
         <p>An augmented reality business card. </p>
