--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- Fortune Teller 3000 -->
       <a href="fortuneTeller/index.html"><article class="project" id="p6">
         <h2>Fortune Teller 3000</h2>   
-        <img src="assets/fortune.jpeg">     
+        <img src="assets/fortune.jpg">     
         <p>A fortune telling calculator.</p>
       </article></a>
 
