--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
     <!-- Each project is an article element; edit below to reflect your own projects. -->
     <section id="projects">
       <h1>Projects</h1>
+      
+      <!-- Movie Tagline Generator -->
+      <a href="taglineGenerator/index.html"><article class="project" id="p8">
+        <h2>Random Movie Tagline Generator</h2>   
+        <p>A tool for generator randomized movie taglines.</p>
+      </article></a>
+
+      
+      <!-- Custom Soundboard -->
+      <a href="soundboard/index.html"><article class="project" id="p7">
+        <h2>Custom Soundboard</h2>   
+        <p>A custom soundbaord composed of synth notes and samples.</p>
+      </article></a>
 
       <!-- Fortune Teller 3000 -->
       <a href="fortuneTeller/index.html"><article class="project" id="p6">
