--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <!-- The navigation box that lines the right border; edit this element to adjust your navigation. -->
     <aside>
+      <a href="#p8">Movie Tagline Generator</a>
+      <a href="#p7">Custom Soundboard</a>
       <a href="#p6">Fortune Teller 3000</a>   
       <a href="#p5">JavaScript Excercise 2: Lifetime Suply Calculator</a>    
       <a href="#p4">JavaScript Excercise 1: Days Till Graduation Calculator</a>    
