--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <h1>Projects</h1>
       
       <!-- Movie Tagline Generator -->
-      <a href="taglineGenerator/index.html"><article class="project" id="p8">
+      <a href="taglineGenerator/taglineGenerator.html"><article class="project" id="p8">
         <h2>Random Movie Tagline Generator</h2>   
         <p>A tool for generator randomized movie taglines.</p>
       </article></a>
