Adding Polygonal Animal Project

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
     <section id="projects">
       <h1>Projects</h1>
       
+      
+      <!-- Polygonal Animal -->
+      <a href="polygonalAnimal/index.html"><article class="project" id="p8">
+        <h2>A Polygonal Animal</h2> 
+        <img src="polygonalAnimal/6.png">  
+        <p>A pologonal animal created via Gravit, a free adobe illustrator alternative. An introduction to vector graphics.</p>
+      </article></a>
+
       <!-- Movie Tagline Generator -->
       <a href="taglineGenerator/taglineGenerator.html"><article class="project" id="p8">
         <h2>Random Movie Tagline Generator</h2>   
