--- a/polygonalAnimal/index.html
+++ b/polygonalAnimal/index.html
@@ -64,7 +64,7 @@
         <li>Design incorporates bright decorative color scheme (2 points). </li>
         <li>Animal created is easy to identify (2 points). </li>
         <li>Graphic designed in a manner that is visually pleasing, balanced, and creates an interest in the topic (2 points). </li>
-        <li>2 pts: Graphic file is saved as an SVG file and PNG file, and both files are submitted to onCampus assignments (2 points). </li>
+        <li>Graphic file is saved as an SVG file and PNG file, and both files are submitted to onCampus assignments (2 points). </li>
       </ul>
 
       <b>Total: 20 points.</b>
